2003-10-12  Bas Wijnen <b.wijnen@phys.rug.nl>
	* server/develop.c, server/player.c, server/server.h: Allowed multiple
	development cards of the same type.
	* client/client.c, server/discard.c, server/gold.c, server/robber.c,
	server/server.c, server/player.c, server/pregame.c, server/server.h,
	server/turn.c: Added support for viewers and disconnected players.
	* server/develop.c, server/player.c, server/pregame.c,
	server/resource.c, server/robber.c, server/turn.c: Cleanup.

2003-10-12  Jeff Breidenbach  <jab@debian.org>

	* debian/control, debian/changelog: prepare for 0.8.0 package

2003-10-11  Bas Wijnen <b.wijnen@phys.rug.nl>
	* ai/greedy.c, client/client.c, client/client.h, client/guimap.c,
	client/robber.c, common/map.c, common/map.h, common/map_query.c,
	server/robber.c: Prepared client for pirates, bugfixes.
	* client/build.c, client/client.c. client/guimap.c, client/robber.c,
	client/turn.c, common/map.h, common/map_query.c, server/buildutil.c,
	server/robber.c server/server.h server/turn.c: Completed pirates in
	server and client.  Bugfixes.
	* common/log.c: Code cleanup.
	* server/gnocatan-server-gtk.c: Used message window for log.

2003-10-10  Bas Wijnen <b.wijnen@phys.rug.nl>
	* common/game.c, common/game.h, common/map.c, common/map.h,
	common/map_query.c, server/robber.c, server/turn.c: prepared server
	for pirates.

2003-10-10  Bas Wijnen <b.wijnen@phys.rug.nl>
	* ai/client.c: Fixed AI naming bug.
	* client/gui.c: Made code nicer, fixed bugs.
	* client/robber.c: Fixed language bug.
	* client/theme.c: Made code nicer, fixed scaling bugs.

2003-10-03  Roland Clobus <rclobus@bigfoot.com>
	* client/gold.c: Cosmetic change for the Choose Gold dialog.

2003-10-03  Bas Wijnen <b.wijnen@phys.rug.nl>
	* server/player.c: Bugfix.
	* server/buildutil.c: Fixed bug #817465.
	* server/gold.c: Removed debugging statement.
	* client/gui.c: Inserted startsize patch (fixes bug #722641).

2003-10-03  Bas Wijnen <b.wijnen@phys.rug.nl>
	* server/player.c: Bugfix.
